CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.0        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
10-07-05    Implemented accessibility enhancements for navigation (Michael Heuberger)
10-07-05    Big naming cleanup in CSS as per RFC (Riccardo Magliocchetti)

+-----------------------+
| VERSION: 0.4.6        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
19-08-05    Changed CSS z-index in style.php so FCK downdowns are not hidden
19-08-05    Routine to get page execution time was improved to be more accurate, it    
            it now reports the same times as ZDE (Jochem Gugelot).

+-----------------------+
| VERSION: 0.4.5        |
+-----------------------+
BUGFIXES
18-08-05    Longtime outstanding bug where db session handling was broken has
            been fixed (Louay Gammo)
10-08-05    Fixed bug where editing articles 'remembered' the GUI category, not
            the article category
10-08-05    Fixed verticalSimple.css to work with new CSS
08-08-05    Removed quoting of chartset=utf-8 (Ernest Beinrohr)
01-08-05    Added php5 workaround in SGL_Wizard because strict call by reference
            behaviour (Tobias Kuckuck)
01-08-05    SGL_Item::getDynamicFields now returns a string of html representing
            the fields, or alternatively an array of just the data. (Fabio Bacigalupo)
01-08-05    Removed obselete stylesheets
26-07-05    Fixed notices related to PHP 4.4.0
24-07-05    Missing form name added, without which it was impossible to create new articles
21-07-05    Fixed inability to edit org types
20-07-05    Implemented boundary checks for section edit
20-07-05    Removed shop-related sections from mysql data
17-07-05    Fixed sections listed in blocks mgr, 'none' now correctly reads
            'all sections'

IMPROVEMENTS
17-08-05    Updated pear libs included recently patched XML_RPC
17-08-05    Added additional arg to SGL_Item::retrievePaginated() for specifying
            sort column